# nix-scripts

./: README.md  flake.nix  justfile
.github/workflows/: deadnix.yml  flake.yml  refresh-flake.yml
apps/awww-switcher/: default.nix  pyproject.toml
apps/awww-switcher/app/: cli.py
apps/batlimit/: default.nix  main.sh
apps/battery-notifier/: Cargo.toml  debug-file.yaml  default.nix
apps/battery-notifier/src/: battery.rs  helpers.rs  main.rs
apps/cliphist-rofi/: default.nix
apps/dunstify-brightness/: default.nix
apps/dunstify-sound/: default.nix  main.sh
apps/mullvad-status/: default.nix  dune-project  mullvad-status.opam  mullvad_status.opam
apps/mullvad-status/lib/: dune
apps/mullx/: default.nix  mullx.opam
apps/mullx/lib/: dune
apps/nixgrep/: default.nix  dune-project
apps/nixgrep/lib/: dune
apps/nixgrep/test/: dune
apps/nmcli-wifi-scan-waybar/: default.nix  main.sh
apps/playerctl-waybar/: default.nix
apps/playerctl-waybar/app/: cli.py
apps/pstore/: dune-project
apps/pstore/lib/: dune
apps/rofi-radio/: config.go  default.nix  main.go
apps/screen-capture/: default.nix
apps/screen-capture-x11/: default.nix
apps/spotify-dbus/: default.nix  main.sh
apps/swww-switcher/: default.nix
apps/swww-switcher/app/: cli.py
apps/sys-brightness/: README.md  default.nix  main.sh
apps/sys-sound/: default.nix  main.sh
battery-notifier/: Cargo.toml  default.nix
battery-notifier/src/: main.rs
cliphist-rofi/: default.nix
dunstify-brightness/: default.nix
dunstify-sound/: default.nix
mullman/: default.nix
mullx/: default.nix  dune-project  mullx.opam
nix/: hm-module.nix
nix/home-manager/: battery-notifier.nix  pstore.nix  rofi-radio.nix
playerctl-waybar/: default.nix  pyproject.toml  shell.nix
playerctl-waybar/app/: cli.py
pstore/: default.nix
pstore/test/: dune
rofi-radio/: config.go  config.json  config.yaml  default.nix  go.mod  go.sum  justfile  main.go  rofi.go  sound.go  sources.go
rofi-radio/etc/: config.rasi  config.yaml
swww-switcher/: default.nix
