[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Luis Quiñones Requelme <lpaandres2020@gmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
pygobject = "^3.46.0"
autopep8 = "^2.0.4"

[tool.poetry.scripts]
cli = "app.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
