[package]
name = "battery-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
linuxver = "0.1.0"
os_info = { version = "3.7.0", default-features = false }
soloud = { git = "https://github.com/MoAlyousef/soloud-rs" }


# soloud = { version = "1.0.5", default-features = false, features = ["alsa"] }
