(lang dune 3.8)

(name mullvad_status)

(generate_opam_files true)

(source
 (github luisnquin/nix-scripts))

(authors "Luis Quiñones Requelme")

(maintainers "Luis Quiñones Requelme")

(documentation https://url/to/documentation)

(package
 (name mullvad_status)
 (synopsis "A simple mullvad wrapper to extend functionality")
 (description "A simple mullvad wrapper to extend functionality")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
